# control-orogen-locomotion_switcher

./: CMakeLists.txt  README.md  locomotion_switcher.orogen  locomotion_switcherTypes.hpp  manifest.xml
logs/20180323-1638/: info.yml
scripts/: switcherDemo.rb  test.rb  test2.rb  vrepTest.rb
tasks/: CMakeLists.txt  Task.cpp  Task.hpp
